etc/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Mon Jun 18 14:56:31 2018
*filter
:INPUT ACCEPT [315:16334]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [401:49834]

# Allow all loopback (lo0) traffic and reject traffic
# to localhost that does not originate from lo0.
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s 127.0.0.0/8 -j REJECT

# Allow ping.
-A INPUT -p icmp -m state --state NEW --icmp-type 8 -j ACCEPT
-A INPUT -i enp0s25 -p tcp --dport 3999 -j ACCEPT
-A INPUT -s 192.168.1.0/24 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT

## Allow forwarding from local network to Docker
# Do not allow access from the outside to Docker, except for already established connections
-I DOCKER-USER 1 ! -s 192.168.1.0/24 -i enp0s25 -j REJECT --reject-with icmp-port-unreachable
-I DOCKER-USER 1 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT


# Allow inbound traffic from established connections.
# This includes ICMP error returns.
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Log what was incoming but denied (optional but useful).
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables_INPUT_denied: " --log-level 7

# Reject all other inbound.
-A INPUT -i enp0s25 -j REJECT

# Reject all traffic forwarding.
-A FORWARD -j REJECT
COMMIT
# Completed on Mon Jun 18 14:56:31 2018
